--- a/style.css
+++ b/style.css
@@ -10,11 +10,43 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
 }
+.slider-container {
+  width:700px;
+  height:100% ;
+  height:fit-content;
+  overflow: hidden;
+  position: relative;
+  
+}
+
+/* Slider style */
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+
+/* Individual slide style */
+.slide {
+  flex: 0 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:300px;
+  height: 80px;
+}
+
+.slide img {
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+  object-fit: cover;
+}
 .sidebar {
   position: fixed;
   top: 0;
   left: 0;
-  background-color:#010902;
+  background-color:#000000d8;
   color: white;
   height: 100%;
   width: 250px;
@@ -32,7 +64,7 @@ body {
   border-radius: 7px;
   display:flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 3px;
 }
 
@@ -100,19 +132,21 @@ body {
 
 /* Header */
 .header {
-  background-color:#010902;
-  color: white;
-  height: 114px;
+  background-color:#ffffff;
+  color: rgb(0, 0, 0);
+  height: 190px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
+  overflow: hidden;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 .header .toggle-btn {
   background: none;
   border: none;
-  color: white;
+  /* color: white; */
   font-size: 20px;
   cursor: pointer;
 }
@@ -127,7 +161,7 @@ body {
 
 /* Footer */
 .footer {
-  background-color:#010902;
+  background-color:#010902d8;
   color: white;
   padding: 10px 0;
   text-align: center;
@@ -169,6 +203,9 @@ body {
 
   .sidebar.expanded ~ .footer {
     width: calc(100% - 200px); /* Adjust for expanded sidebar */
+  }
+  .dashboard-content .features ul img{
+    display: none;
   }
 }
 /* Update for more better exp */
@@ -263,11 +300,20 @@ body {
   color: #007bff;
   text-decoration: none;
 }
-
+.fa-bars:hover{
+  color: black;
+}
 .dashboard-content a:hover {
   text-decoration: underline;
 }
-
+.dashboard-content .features ul img{
+  width: 470px;
+  height: auto;
+  position: absolute;
+  right:14rem;
+  object-fit: cover;
+  border-radius: 20px 0px;
+}
 .contact {
   margin-top: 30px;
   background: #f9f9f9;
