--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ body {
 .nav-links ul {
   list-style: none;
   padding: 0;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .nav-links li {
-  padding: 15px 10px;
+  padding: 10px 10px;
   display: flex;
   align-items: center;
   transition: background-color 0.2s ease;
@@ -207,7 +207,11 @@ body {
   .dashboard-content .features ul img{
     display: none;
   }
+  .slider{
+    display: none;
+  }
 }
+
 /* Update for more better exp */
 
 /* Content */
