--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   width: 60px;
 }
 .sidebar .logo {
-  padding: 10px;
+  /* padding: 10px; */
   text-align: center;
   font-size: 16px;
   font-weight: bold;
@@ -161,11 +161,12 @@ body {
 
 /* Footer */
 .footer {
-  background-color:#010902d8;
-  color: white;
+  /* background-color:#010902d8; */
+  color: black;
   padding: 10px 0;
   text-align: center;
   height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 /* Responsive Behavior */
@@ -311,13 +312,20 @@ body {
   text-decoration: underline;
 }
 .dashboard-content .features ul img{
+  display:block;
   width: 470px;
   height: auto;
-  position: absolute;
-  right:14rem;
+  /* position: absolute; */
+  right:4rem;
   object-fit: cover;
   border-radius: 20px 0px;
 }
+@media (max-width: 1200px) {
+  .dashboard-content .features ul img{
+    display: 
+    none;
+  }
+ }
 .contact {
   margin-top: 30px;
   background: #f9f9f9;
